--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@capacitor/status-bar": "1.0.6",
     "@ionic/angular": "^5.9.4",
     "angular": "^1.8.3",
+    "cordova-plugin-camera": "^6.0.0",
     "ionic": "^5.4.16",
     "rxjs": "~6.6.0",
     "tslib": "^2.2.0",
@@ -37,7 +38,7 @@
     "@angular-eslint/eslint-plugin": "~12.0.0",
     "@angular-eslint/eslint-plugin-template": "~12.0.0",
     "@angular-eslint/template-parser": "~12.0.0",
-    "@angular/cli": "~13.3.4",
+    "@angular/cli": "13.3.5",
     "@angular/compiler": "~13.3.5",
     "@angular/compiler-cli": "~13.3.5",
     "@angular/language-service": "~13.3.5",
